--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -1,6 +1,6 @@
 name: core
-title: "TweetWallFX Core"
+title: TweetWallFX Core
 version: master
 nav:
-  - modules/ROOT/nav.adoc
-  - modules/module-one/nav.adoc
+- modules/ROOT/nav.adoc
+#  - modules/module-one/nav.adoc
