--- a/logging/build.gradle
+++ b/logging/build.gradle
@@ -25,6 +25,6 @@
 apply plugin: 'java-library'
 
 dependencies {
-    api group: 'org.apache.logging.log4j', name: 'log4j-core', version: versionLog4j
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: versionLog4j
+    api group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.2'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.2'
 }
