--- a/util/build.gradle
+++ b/util/build.gradle
@@ -25,9 +25,8 @@ apply plugin: 'java'
 
 dependencies {
     compile group: 'javax.json.bind', name:'javax.json.bind-api', version: versionJavaxJsonBindAPI
-    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: versionLog4j
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.0'
 
-    runtime group: 'org.apache.logging.log4j', name: 'log4j-core', version: versionLog4j
     runtime group: 'org.eclipse', name: 'yasson', version: versionYasson
     runtime group: 'org.glassfish', name: 'javax.json', version: versionJavaxJson
 }
