--- a/.github/workflows/gradleBuild.yml
+++ b/.github/workflows/gradleBuild.yml
@@ -54,26 +54,35 @@ jobs:
         with:
           arguments: --no-daemon --refresh-dependencies --warning-mode all assemble
 
-      # Run test tasks
-      - name: Run test tasks
+#      # Run test tasks
+#      - name: Run test tasks
+#        uses: gradle/gradle-build-action@v2
+#        with:
+#          arguments: --no-daemon --warning-mode all test
+#
+#      # Run check tasks
+#      - name: Run check tasks
+#        uses: gradle/gradle-build-action@v2
+#        with:
+#          arguments: --no-daemon --warning-mode all check
+#
+#      # Archive test reports
+#      - name: Archive build logs
+#        if: always()
+#        uses: actions/upload-artifact@v3
+#        with:
+#          name: ${{ matrix.distribution }}-jdk${{ matrix.jdk }}-build-logs
+#          retention-days: 5
+#          path: |
+#            **/*.jfr
+#            **/hs_err_pid*.log
+#            **/build/reports/*
+
+      # Run publish tasks
+      - name: Run publish tasks
+        if: ${{ (matrix.jdk == '17') && (github.event_name == 'push') && success() }}
         uses: gradle/gradle-build-action@v2
         with:
-          arguments: --no-daemon --warning-mode all test
-
-      # Run check tasks
-      - name: Run check tasks
-        uses: gradle/gradle-build-action@v2
-        with:
-          arguments: --no-daemon --warning-mode all check
-
-      # Archive test reports
-      - name: Archive build logs
-        if: always()
-        uses: actions/upload-artifact@v3
-        with:
-          name: ${{ matrix.distribution }}-jdk${{ matrix.jdk }}-build-logs
-          retention-days: 5
-          path: |
-            **/*.jfr
-            **/hs_err_pid*.log
-            **/build/reports/*
+          arguments: --no-daemon --warning-mode all publish --info
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
