--- a/settings.gradle
+++ b/settings.gradle
@@ -69,5 +69,5 @@ includeWithName ':generic2d', 'tweetwallfx-generic2d'
 
 def mastodon4jProject = new File(rootDir, '../Mastodon4J')
 if (mastodon4jProject.isDirectory()) {
-    includeBuild mastodon4jProject
+//    includeBuild mastodon4jProject
 }
