Add java platform to rootproject and use it for shared versions

--- a/2d/build.gradle
+++ b/2d/build.gradle
@@ -25,4 +25,5 @@
 dependencies {
     implementation project(':tweetwallfx-configuration')
     implementation project(':tweetwallfx-controls')
+    implementation 'org.slf4j:slf4j-api'
 }
