--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@
 plugins {
     id 'base'
     id 'build-dashboard'
+    id 'java-platform'
     id 'com.diffplug.spotless' version '6.18.0'
     id 'com.github.ben-manes.versions' version '0.46.0'
     id 'com.github.spotbugs' version '5.0.14' apply false
@@ -39,6 +40,27 @@ plugins {
 ext {
     javaFxPlatform = osdetector.os == 'osx' ? 'mac' : osdetector.os == 'windows' ? 'win' : osdetector.os
     javaFxPlatform = osdetector.arch == 'aarch_64' ? javaFxPlatform + '-aarch64' : javaFxPlatform
+}
+
+javaPlatform {
+    allowDependencies()
+}
+
+dependencies {
+    api platform('org.junit:junit-bom:5.9.3')
+    api platform('org.apache.logging.log4j:log4j-bom:2.20.0')
+    api platform('org.glassfish.jersey:jersey-bom:3.1.1')
+    api platform('com.fasterxml.jackson:jackson-bom:2.15.0')
+
+    constraints {
+        api 'com.github.spotbugs:spotbugs-annotations:4.7.3'
+        api 'com.vdurmont:emoji-java:5.1.1'
+        api 'jakarta.ws.rs:jakarta.ws.rs-api:3.1.0'
+        api 'org.eclipse:yasson:3.0.3'
+        api 'org.ehcache:ehcache:3.10.8'
+        api 'org.simplify4u:slf4j2-mock:2.3.0'
+        api 'org.slf4j:slf4j-api:2.0.7'
+    }
 }
 
 allprojects {
@@ -194,8 +216,8 @@ allprojects {
         }
 
         dependencies {
-            implementation 'com.github.spotbugs:spotbugs-annotations:4.7.3'
-            implementation 'org.slf4j:slf4j-api:2.0.7'
+            // get recommended versions from the platform project
+            api platform(rootProject)
 
             javafx group: 'org.openjfx', name: 'javafx-base', version: '20.0.1', classifier: javaFxPlatform
             javafx group: 'org.openjfx', name: 'javafx-graphics', version: '20.0.1', classifier: javaFxPlatform
@@ -207,13 +229,13 @@ allprojects {
             jaxb 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
             jaxb 'org.glassfish.jaxb:jaxb-runtime:4.0.2'
 
-            testFramework 'org.junit.jupiter:junit-jupiter-api:5.9.3'
-            testFramework 'org.junit.jupiter:junit-jupiter-params:5.9.3'
             testFramework 'org.assertj:assertj-core:3.24.2'
+            testFramework 'org.junit.jupiter:junit-jupiter-api'
+            testFramework 'org.junit.jupiter:junit-jupiter-params'
             testFramework 'org.mockito:mockito-junit-jupiter:5.3.1'
 
-            testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.3'
-            testRuntimeOnly 'org.junit.platform:junit-platform-runner:1.9.3'
+            testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+            testRuntimeOnly 'org.junit.platform:junit-platform-runner'
             testRuntimeOnly 'org.mockito:mockito-inline:5.2.0'
         }
 
