--- a/conference-spi/build.gradle
+++ b/conference-spi/build.gradle
@@ -24,10 +24,12 @@
 
 dependencies {
     api project(':tweetwallfx-conference-api')
-    api 'jakarta.ws.rs:jakarta.ws.rs-api:3.1.0'
+    api 'jakarta.ws.rs:jakarta.ws.rs-api'
 
-    runtimeOnly 'org.glassfish.jersey.core:jersey-client:3.1.1'
-    runtimeOnly 'org.glassfish.jersey.inject:jersey-hk2:3.1.1'
-    runtimeOnly 'org.glassfish.jersey.media:jersey-media-json-jackson:3.1.1'
-    runtimeOnly 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.0'
+    implementation 'org.slf4j:slf4j-api'
+
+    runtimeOnly 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+    runtimeOnly 'org.glassfish.jersey.core:jersey-client'
+    runtimeOnly 'org.glassfish.jersey.inject:jersey-hk2'
+    runtimeOnly 'org.glassfish.jersey.media:jersey-media-json-jackson'
 }
