--- a/conference-stepengine/build.gradle
+++ b/conference-stepengine/build.gradle
@@ -26,6 +26,7 @@ dependencies {
 
     implementation 'de.jensd:fontawesomefx-commons:11.0'
     implementation 'de.jensd:fontawesomefx-fontawesome:4.7.0-11'
+    implementation 'org.slf4j:slf4j-api'
     implementation project(':tweetwallfx-controls')
     implementation project(':tweetwallfx-stepengine-dataproviders')
     implementation project(':tweetwallfx-transitions')
