--- a/core/build.gradle
+++ b/core/build.gradle
@@ -23,6 +23,7 @@
  */
 
 dependencies {
-    implementation 'com.vdurmont:emoji-java:5.1.1'
+    implementation 'com.vdurmont:emoji-java'
+    implementation 'org.slf4j:slf4j-api'
     implementation project(':tweetwallfx-configuration')
 }
