--- a/mqtt/build.gradle
+++ b/mqtt/build.gradle
@@ -25,5 +25,5 @@
 dependencies {
     implementation project(':tweetwallfx-configuration')
     implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
-    implementation 'org.slf4j:slf4j-api:2.0.7'
+    implementation 'org.slf4j:slf4j-api'
 }
