--- a/tweet-impl-twitter4j/build.gradle
+++ b/tweet-impl-twitter4j/build.gradle
@@ -25,4 +25,6 @@
 dependencies {
     api 'org.twitter4j:twitter4j-core:4.1.2'
     api project(':tweetwallfx-tweet-api')
+
+    implementation 'org.slf4j:slf4j-api'
 }
